# rustservice

./: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yaml  release.yaml
config/: default.json  production.json  test.json
src/: app.rs  configs.rs  database.rs  main.rs  models.rs  settings.rs  shutdown.rs
