[package]
name = "rustservice"
authors = ["Dex <dexwritescode@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_derive = "1.0.152"
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.29.1", features = ["full"] }
signal-hook = "0.3.16"
