[package]
name = "rustservice"
authors = ["Dex <dexwritescode@protom.me>"]
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.13.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
signal-hook = "0.3.16"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
futures = "0.3"
anyhow = "1"
