[package]
name = "todoservice"
authors = ["Dex <dexwritescode@protom.me>"]
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.13.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
signal-hook = "0.3.16"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
futures = "0.3"
anyhow = "1"
thiserror = "1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
tower-http = { version = "0.4.4", features = ["trace"] }
reqwest = { version = "0.11.22", features = ["json"] }
opentelemetry = "0.21.0"
opentelemetry-otlp = { version = "0.14.0", features = [
    "reqwest-client",
    "reqwest-rustls",
    "http-proto",
    "tls",
] }
tracing-opentelemetry = "0.22.0"
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"] }

[dev-dependencies]
temp-env = "0.3.6"
